# binpack-3d

./: Agents.md  Cargo.toml  README.md  rustfmt.toml
algorithmen-web/: deno.json  index.html  package.json  vite.config.ts
algorithmen-web/src/: App.tsx  main.tsx  szene.tsx
benches/: first_algorithmen.rs
proptest-regressions/: algorithmen.txt  second_algorithmen.txt
src/: aabb.rs  algorithmen.rs  bin.rs  corners.rs  first_algorithmen.rs  items.rs  lib.rs  second_algorithmen.rs  sortedbin.rs  vector.rs  wasm_interface.rs
src/snapshots/: algorithmen_test3__algorithmen__tests__check_macro_insta.snap
tests/: algorithmen_first.rs  proptest.rs  second_algorithme_test.rs
