[package]
name = "algorithmen_test3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
hashbrown = { version = "0.16.1", features = ["rayon", "serde"] }
num-traits = "0.2.19"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.18"
tracing = "0.1.44"
wasm-bindgen = "0.2.117"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = { version = "1.47.2", features = ["yaml"] }
proptest = "1.11.0"
rand = { version = "0.10.0", features = ["chacha"] }

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "first_algorithmen"
harness = false
