[package]
name = "algorithmen_test3"
version = "0.1.0"
edition = "2024"

[features]
default = ["second_algorithmen"]
first_algorithmen = []
second_algorithmen = []

[dependencies]
anyhow = "1.0.102"
hashbrown = { version = "0.16.1", features = ["inline-more", "rayon", "serde"] }
itertools = "0.14.0"
num-traits = "0.2.19"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.18"
tracing = "0.1.44"
wasm-bindgen = "0.2.117"
web-sys = { version = "0.3.94", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = { version = "1.47.2", features = ["yaml"] }
proptest = "1.11.0"
rand = { version = "0.10.0", features = ["chacha"] }

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "first_algorithmen"
harness = false

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
