[package]
name = "binpack-3d"
version = "0.1.0"
edition = "2024"
keywords = ["bin-packing", "3d", "wasm", "algorithms", "logistics"]
categories = ["algorithms", "wasm"]
description = "A high-performance, deterministic 3D bin packing library written in Rust."
authors = ["Markus Götz <markusgoetz@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/MythicByte/binpack-3d"
readme = "README.md"

[features]
default = ["second_algorithmen"]
second_algorithmen = []

[dependencies]
anyhow = "1.0.102"
hashbrown = { version = "0.16.1", features = ["inline-more", "rayon", "serde"] }
itertools = "0.14.0"
num-traits = "0.2.19"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.18"
tracing = "0.1.44"
wasm-bindgen = "0.2.117"
web-sys = { version = "0.3.94", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = { version = "1.47.2", features = ["yaml"] }
proptest = "1.11.0"
rand = { version = "0.10.0", features = ["chacha"] }

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "first_algorithmen"
harness = false


[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"
